...
        },
      } as any}
    >
      <Tab.Screen
        name="Journey"
        component={JourneyStack}
        options={{ tabBarLabel: 'My Journey' }}
      />
      <Tab.Screen
        name="Courses"
        component={CoursesStack}
        options={{ tabBarLabel: 'Courses' }}
      />
...
